src/test/ui/copy-a-resource.stderr
error[E0599]: no method named `clone` found for type `Foo` in the current scope
  --> $DIR/copy-a-resource.rs:18:16
   |
LL | struct Foo {
   | ---------- method `clone` not found for this
...
LL |     let _y = x.clone();
   |                ^^^^^
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `std::clone::Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
